force-app/main/default/objects/ProcessBuilderSettings__c/ProcessBuilderSettings__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>ProcessBuilderSettings</label>
</CustomObject>