force-app/main/default/objects/ProcessBuilderSettings__c/fields/AccountProcessBuilder__c.field-meta.xml
<CustomField>
    <fullName>AccountProcessBuilder__c</fullName>
    <defaultValue>true</defaultValue>
    <label>AccountProcessBuilder</label>
    <type>Checkbox</type>
</CustomField>