force-app/main/default/objects/ProcessBuilderSettings__c/fields/IndividualEmailResultProcessBuilder__c.field-meta.xml
<CustomField>
    <fullName>IndividualEmailResultProcessBuilder__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IndividualEmailResultProcessBuilder</label>
    <type>Checkbox</type>
</CustomField>