force-app/main/default/objects/ProcessBuilderSettings__c/fields/LoyaltyProcessBuilder__c.field-meta.xml
<CustomField>
    <fullName>LoyaltyProcessBuilder__c</fullName>
    <defaultValue>true</defaultValue>
    <label>LoyaltyProcessBuilder</label>
    <type>Checkbox</type>
</CustomField>