force-app/main/default/objects/ProcessBuilderSettings__c/fields/LoyaltyTransactionProcessBuilder__c.field-meta.xml
<CustomField>
    <fullName>LoyaltyTransactionProcessBuilder__c</fullName>
    <defaultValue>true</defaultValue>
    <label>LoyaltyTransactionProcessBuilder</label>
    <type>Checkbox</type>
</CustomField>